--- a/Battleships.Web/Pages/Test.cshtml
+++ b/Battleships.Web/Pages/Test.cshtml
@@ -3,3 +3,20 @@
     ViewData["Title"] = "Play Battleships";
 }
 <h2>@ViewData["Title"]</h2>
+
+
+
+<div ng-controller="BattleshipController as vm">
+
+    <div ng-init="vm.initData()">
+
+    </div>
+
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.8/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.6.8/angular-resource.min.js"></script>
+<script src="~/app/app.js"></script>
+<script src="~/app/shared/settings/common.services.js"></script>
+<script src="~/app/components/battleship/battleship.service.js"></script>
+<script src="~/app/components/battleship/battleship.component.js"></script>
