ng app added and first controller action implemented

--- a/Battleships.Web/Pages/Test.cshtml
+++ b/Battleships.Web/Pages/Test.cshtml
@@ -10,13 +10,14 @@
 
     <div ng-init="vm.initData()">
 
+        <div ng-model="vm.model.firstPlayer.name"></div>
+        <div>Own board</div>
+
+        <div ng-repeat=""></div>
+
+        <div>Firing board</div>
+
     </div>
 
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.8/angular.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.6.8/angular-resource.min.js"></script>
-<script src="~/app/app.js"></script>
-<script src="~/app/shared/settings/common.services.js"></script>
-<script src="~/app/components/battleship/battleship.service.js"></script>
-<script src="~/app/components/battleship/battleship.component.js"></script>
