--- a/Battleships.Web/Pages/_Layout.cshtml
+++ b/Battleships.Web/Pages/_Layout.cshtml
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
-<body>
+<body ng-app="app" ng-cloak>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -68,7 +68,14 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
-    @RenderSection("Scripts", required: false)    
+    @RenderSection("Scripts", required: false)
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.8/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.6.8/angular-resource.min.js"></script>
+    <script src="~/app/app.js"></script>
+    <script src="~/app/shared/settings/commonServices.js"></script>
+    <script src="~/app/components/battleship/battleshipService.js"></script>
+    <script src="~/app/components/battleship/battleshipComponent.js"></script>
 
 </body>
 </html>
