--- a/Battleships.Web/wwwroot/css/site.css
+++ b/Battleships.Web/wwwroot/css/site.css
@@ -1,6 +1,12 @@
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 /* Wrapping element */
@@ -24,6 +30,41 @@ body {
 /* QR code generator */
 #qrCode {
     margin: 15px;
+}
+
+.firing-board-row {
+    cursor: pointer;
+}
+
+    .firing-board-row:hover {
+        background-color: #ddd;
+    }
+
+.hit {
+    background-color: red;
+}
+
+.miss {
+    background-color: lightblue;
+}
+
+.ship {
+    background-color: black;
+}
+
+.centered {
+    text-align: center;
+}
+
+div#preloader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+    background: white url('/images/preloader.gif') no-repeat center center;
 }
 
 /* Hide/rearrange for smaller screens */
